Added link to county page from transmitter page

--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -7,7 +7,9 @@
       <dt class="col-sm-4">Area</dt>
       <dd class="col-sm-8"><%= @transmitter.area %></dd>
       <dt class="col-sm-4">County</dt>
-      <dd class="col-sm-8"><%= @transmitter.county %></dd>
+      <dd class="col-sm-8">
+        <%== link_to(@transmitter.county, "/transmitters/counties/#{@transmitter.county.url_key}") %>
+      </dd>
       <dt class="col-sm-4">National Grid Reference</dt>
       <dd class="col-sm-8"><%= @transmitter.ngr %></dd>
       <dt class="col-sm-4">WGS84 Coordinates</dt>
