--- a/views/services_show.erb
+++ b/views/services_show.erb
@@ -27,7 +27,7 @@
 </p>
 
 
-<%== partial("applications", :locals => {:type => 'service', :authority => @service.authority, :bearer => @bearer}) %>
+<%== partial("applications", :locals => {:type => 'service', :authority => @service.authority, :service => @service}) %>
 
 <div class="row">
   <div class="col-md-6">
