--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,16 @@
   margin-bottom: 2.0rem;
 }
 
+.btn-group-xs > .btn, .btn-xs
+{
+  padding: .4rem;
+  font-size: .75rem;
+  line-height: .5;
+  border-radius: .2rem;
+  margin-right: .3rem;
+  margin-left: .3rem;
+}
+
 .card-sm .card-header
 {
   padding: .5rem .75rem;
