--- a/views/transmitters_list.erb
+++ b/views/transmitters_list.erb
@@ -2,37 +2,39 @@
 
 <div class="row">
   <div class="col-md">
-  <table class="table table-responsive">
+  
+  <% if @transmitters.count > 0 %>
+    <table class="table table-responsive">
 
-  <thead>
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Area</th>
-      <% if @county.nil? %>
-      <th scope="col">County</th>
-      <% end %>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @transmitters.each do |transmitter| %>
+    <thead>
       <tr>
-        <td>
-          <%== link_to(transmitter.name, transmitter.path) %>
-        </td>
-        <td>
-          <%= transmitter.area %>
-        </td>
+        <th scope="col">Name</th>
+        <th scope="col">Area</th>
         <% if @county.nil? %>
-        <td>
-          <%= transmitter.county %>
-        </td>
-      <% end %>
+        <th scope="col">County</th>
+        <% end %>
       </tr>
-    <% end %>
-  </tbody>
+    </thead>
 
-  </table>
+    <tbody>
+      <% @transmitters.each do |transmitter| %>
+        <tr>
+          <td>
+            <%== link_to(transmitter.name, transmitter.path) %>
+          </td>
+          <td>
+            <%= transmitter.area %>
+          </td>
+          <% if @county.nil? %>
+          <td>
+            <%= transmitter.county %>
+          </td>
+        <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+
+    </table>
   </div>
 
   <% if @transmitters.count < 50 %>
@@ -40,5 +42,11 @@
     <h3>Map</h3>
     <%== partial('map', :locals => {:transmitters => @transmitters}) %>
   </div>
+  <% end %>
+
+  <% else %>
+    <div class="alert alert-warning" role="alert">
+      There are no transmitters.
+    </div>
   <% end %>
 </div>
