Added RadioDNS Hybrid Radio trademark notice

--- a/views/_footer.erb
+++ b/views/_footer.erb
@@ -22,5 +22,8 @@
         This website is Open Source, please help improve it by submitting a change on GitHub: <br />
         <a href="https://github.com/njh/radiodns-uk">https://github.com/njh/radiodns-uk</a>
       </p>
+      <p>
+        RadioDNS Hybrid Radio&reg; is a registered trademark of <a href="http://www.radiodns.org/">RadioDNS Limited</a>.
+      </p>
     </div>
   </footer>
