This site is not affiliated with RadioDNS Limited.

--- a/views/_footer.erb
+++ b/views/_footer.erb
@@ -23,7 +23,8 @@
         <a href="https://github.com/njh/radiodns-uk">https://github.com/njh/radiodns-uk</a>
       </p>
       <p>
-        RadioDNS Hybrid Radio&reg; is a registered trademark of <a href="http://www.radiodns.org/">RadioDNS Limited</a>.
+        RadioDNS Hybrid Radio&reg; is a registered trademark of <a href="http://www.radiodns.org/">RadioDNS Limited</a>.<br />
+        This site is not affiliated with RadioDNS Limited.
       </p>
     </div>
   </footer>
