Fixed responsive tables by adding an enclosing div

--- a/views/authorities_index.erb
+++ b/views/authorities_index.erb
@@ -1,7 +1,7 @@
 <% content_for :page_title, "List of RadioDNS Authorities in the UK" %>
 
-<div class="row">
-  <table class="table table-responsive">
+<div class="table-responsive">
+  <table class="table">
 
   <thead>
     <tr>
