--- a/views/multiplexes_show.erb
+++ b/views/multiplexes_show.erb
@@ -15,7 +15,8 @@
     </dl>
 
     <h3>Services</h3>
-    <table class="table table-sm table-responsive">
+    <div class="table-responsive">
+    <table class="table table-sm">
 
       <thead>
         <tr>
@@ -45,10 +46,12 @@
         <% end %>
       </tbody>
     </table>
+    </div>
 
 
     <h3>Transmitters</h3>
-    <table class="table table-sm table-responsive">
+    <div class="table-responsive">
+    <table class="table table-sm">
 
       <thead>
         <tr>
@@ -70,6 +73,7 @@
         <% end %>
       </tbody>
     </table>
+    </div>
   </div>
 
   <div class="col-md-5">
