--- a/views/reports_no-radiodns.erb
+++ b/views/reports_no-radiodns.erb
@@ -6,7 +6,8 @@
 </p>
 
 <h3>DAB Bearers</h2>
-<table class="table table-responsive">
+<div class="table-responsive">
+<table class="table">
 
   <thead>
     <tr>
@@ -33,10 +34,11 @@
   </tbody>
 
 </table>
-
+</div>
 
 <h3>FM Bearers</h2>
-<table class="table table-responsive">
+<div class="table-responsive">
+<table class="table">
 
   <thead>
     <tr>
@@ -71,3 +73,4 @@
   </tbody>
 
 </table>
+</div>
