--- a/views/reports_no-si-xml.erb
+++ b/views/reports_no-si-xml.erb
@@ -5,7 +5,8 @@
   radiodns.org but have no entry in the authority's SI.xml file.
 </p>
 
-<table class="table table-responsive">
+<div class="table-responsive">
+<table class="table">
 
   <thead>
     <tr>
@@ -34,3 +35,4 @@
   </tbody>
 
 </table>
+</div>
