--- a/views/reports_unknown-to-ofcom.erb
+++ b/views/reports_unknown-to-ofcom.erb
@@ -6,7 +6,8 @@
   spreadsheet of licensed transmissions.
 </p>
 
-<table class="table table-responsive">
+<div class="table-responsive">
+<table class="table">
 
   <thead>
     <tr>
@@ -37,3 +38,4 @@
   </tbody>
 
 </table>
+</div>
