--- a/views/services_index.erb
+++ b/views/services_index.erb
@@ -1,7 +1,7 @@
 <% content_for :page_title, "Stations with RadioDNS in the UK" %>
 
-<div class="row">
-  <table class="table table-responsive">
+<div class="table-responsive">
+  <table class="table">
 
     <thead>
       <tr>
