--- a/views/transmitters_list.erb
+++ b/views/transmitters_list.erb
@@ -4,7 +4,8 @@
   <div class="col-md">
   
   <% if @transmitters.count > 0 %>
-    <table class="table table-responsive">
+    <div class="table-responsive">
+    <table class="table">
 
     <thead>
       <tr>
@@ -35,6 +36,7 @@
     </tbody>
 
     </table>
+  </div>
   </div>
 
   <% if @transmitters.count < 50 %>
