--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -26,7 +26,8 @@
 
     <% unless @transmitter.multiplexes.count == 0 %>
     <h3>DAB Multiplexes</h3>
-    <table class="table table-sm table-responsive">
+    <div class="table-responsive">
+    <table class="table table-sm">
 
       <thead>
         <tr>
@@ -52,11 +53,13 @@
         <% end %>
       </tbody>
     </table>
+    </div>
     <% end %>
 
     <% unless @transmitter.bearers.count == 0 %>
     <h3>FM Services</h3>
-    <table class="table table-sm table-responsive">
+    <div class="table-responsive">
+    <table class="table table-sm">
 
       <thead>
         <tr>
@@ -90,6 +93,7 @@
         <% end %>
       </tbody>
     </table>
+    </div>
     <% end %>
   </div>
 
