Changed SID to PI Code for FM

--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -64,7 +64,7 @@
       <thead>
         <tr>
           <th scope="col">Frequency</th>
-          <th scope="col">SID</th>
+          <th scope="col">PI Code</th>
           <th scope="col">Service</th>
           <th scope="col">Authoritative FQDN</th>
         </tr>
