--- a/views/_map.erb
+++ b/views/_map.erb
@@ -5,12 +5,13 @@
 <script type="text/javascript">
   var mymap = L.map('map').setView([<%= transmitters.first.lat %>, <%= transmitters.first.long %>], 13);
 
-  L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibmpoIiwiYSI6ImNqbzJ3Ymd6OTBvbWszcW5zcGZqMzV5czkifQ.xsaghFKffSmqMcBgzacAcw', {
+  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
     maxZoom: 18,
     attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
       '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
       'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-    id: 'mapbox.streets'
+    id: 'mapbox/outdoors-v11',
+    accessToken: 'pk.eyJ1IjoibmpoIiwiYSI6ImNqbzJ3Ymd6OTBvbWszcW5zcGZqMzV5czkifQ.xsaghFKffSmqMcBgzacAcw'
   }).addTo(mymap);
 
   var transmitters = new L.featureGroup();
