Added report for Non-authoritative bearers in SI files

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -37,6 +37,7 @@
     <li><a href="/reports/no-radiodns">Bearers with no radiodns.org entry</a></li>
     <li><a href="/reports/no-si-xml">Stations with no service entry</a></li>
     <li><a href="/reports/unknown-to-ofcom">Bearers that aren't known to Ofcom</a></li>
+    <li><a href="/reports/non-authoritative-in-si">Non-authoritative bearers in SI files</a></li>
   </ul>
 </div>
 
